Style actor container sheet.

--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -147,11 +147,6 @@
 /* ====================== */
 /* Sheet */
 /* ====================== */
-.morkborg.window-app.sheet {
-  /* TODO: decide if we want non-black-default box-shadow;
-  /*box-shadow: 0 0 10px #222222; */
-}
-
 .morkborg.sheet .window-content {
   overflow-y: hidden;
   padding: 5px;
@@ -309,17 +304,44 @@
   overflow-y: auto;
 }
 
+.morkborg.sheet .sheet-body .form-group {
+  margin-bottom: 8px;
+}
+
+.morkborg.sheet .sheet-body .form-group label {
+  font-family: var(--h2-font);
+  font-size: 20px;
+  text-align: right;
+  margin-right: 10px;
+}
+
+.morkborg.sheet .sheet-body .form-group input {
+  font-family: var(--item-font);
+  font-size: 14pt;
+}
+
+.morkborg.sheet .sheet-body .form-group select {
+  font-family: var(--item-font);
+  font-size: 14pt;
+}
+
+.morkborg.sheet .sheet-body .form-group.special {
+  flex: 1;
+}
+
 /* ====================== */
 /* Actor sheet */
 /* ====================== */
+.morkborg.sheet.actor .sheet-header .actor-subtitle {
+  font-family: var(--h3-font);
+  font-size: 24px;
+  text-transform: uppercase;
+  margin-left: 13px;
+}
+
 .morkborg.sheet.actor .rule-text {
   font-family: var(--item-font);
   font-size: 10pt;
-}
-
-.morkborg.sheet.actor .you-have-no {
-  /* TODO: decide if this is better left-align or centered */
-  /* text-align: center; */
 }
 
 /* ====================== */
@@ -723,9 +745,6 @@ span {
 }
 
 /* ====================== */
-/* Character sheet obituary (class) tab */
-/* ====================== */
-/* ====================== */
 /* Actor sheet violence tab */
 /* ====================== */
 .morkborg.sheet.actor .sheet-body .violence-tab .item-list.weapon-list .item {
@@ -974,12 +993,6 @@ input[type="radio"]:disabled
   color: var(--highlight-background-color);
 }
 
-/*
-TODO: figure out if we want a 2-col inventory
-.morkborg.sheet.actor .sheet-body .equipment-tab .item-list {
-  columns: 2;
-}
-*/
 /* ====================== */
 /* Creature sheet */
 /* ====================== */
@@ -1039,31 +1052,6 @@ TODO: figure out if we want a 2-col inventory
   margin-left: 14px;
 }
 
-.morkborg.sheet.creature .sheet-body .form-group {
-  margin-bottom: 8px;
-}
-
-.morkborg.sheet.creature .sheet-body .form-group label {
-  font-family: var(--h2-font);
-  font-size: 20px;
-  text-align: right;
-  margin-right: 10px;
-}
-
-.morkborg.sheet.creature .sheet-body .form-group input {
-  font-family: var(--item-font);
-  font-size: 14pt;
-}
-
-.morkborg.sheet.creature .sheet-body .form-group select {
-  font-family: var(--item-font);
-  font-size: 14pt;
-}
-
-.morkborg.sheet.creature .sheet-body .form-group.special {
-  flex: 1;
-}
-
 /* ====================== */
 /* Item sheet */
 /* ====================== */
@@ -1098,28 +1086,6 @@ TODO: figure out if we want a 2-col inventory
 .morkborg.sheet.item .sheet-body {
   margin-top: 8px;
   padding: 5px;
-  padding-right: 5px;
-}
-
-.morkborg.sheet.item .sheet-body .form-group {
-  margin-bottom: 8px;
-}
-
-.morkborg.sheet.item .sheet-body .form-group label {
-  font-family: var(--h2-font);
-  font-size: 20px;
-  text-align: right;
-  margin-right: 10px;
-}
-
-.morkborg.sheet.item .sheet-body .form-group input {
-  font-family: var(--item-font);
-  font-size: 14pt;
-}
-
-.morkborg.sheet.item .sheet-body .form-group select {
-  font-family: var(--item-font);
-  font-size: 14pt;
 }
 
 /* ====================== */
@@ -1168,40 +1134,49 @@ TODO: figure out if we want a 2-col inventory
   margin-left: 14px;
 }
 
-.morkborg.sheet.item .sheet-body {
-  margin-top: 8px;
+/* ====================== */
+/* Container sheet */
+/* ====================== */
+.morkborg.sheet.actor.container .sheet-header {
+  margin-top: 0;
+  flex: 0 0 90px;
+  display: flex;
+  flex-direction: row;
   padding: 5px;
 }
 
-.morkborg.sheet.follower .sheet-body .form-group {
-  margin-bottom: 8px;
+.morkborg.sheet.actor.container .sheet-header .header-col1 {
+  flex: 0 0 200px;
 }
 
-.morkborg.sheet.follower .sheet-body .form-group label {
-  font-family: var(--h2-font);
-  font-size: 20px;
-  text-align: right;
-  margin-right: 10px;
-}
-
-.morkborg.sheet.follower .sheet-body .form-group input {
-  font-family: var(--item-font);
-  font-size: 14pt;
-}
-
-.morkborg.sheet.follower .sheet-body .form-group select {
-  font-family: var(--item-font);
-  font-size: 14pt;
-}
-
-.morkborg.sheet.follower .sheet-body .form-group.special {
+.morkborg.sheet.actor.container .sheet-header .header-col2 {
+  display: flex;
   flex: 1;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  margin: 5px;
+}
+
+.morkborg.sheet.actor.container .sheet-header .profile-img {
+  height: 200px;
+  width: 200px;
+}
+
+.morkborg.sheet.actor.container .sheet-header .name-row {
+  flex: 0 0 45px;
+  margin-bottom: 10px;
+  padding-left: 12px;
+  width: 100%;
+}
+
+.morkborg.sheet.actor.container .sheet-header input[type="text"].container-name {
+  height: 45px;
 }
 
 /* ====================== */
 /* UI/Dialog fixes */
 /* ====================== */
-/* TODO: figure out the right class/level to fix this stuff */
 .form-group input[type="text"] {
   color: var(--foreground-color);
 }
@@ -1251,12 +1226,6 @@ input[type="text"]:focus {
   box-shadow: 0 0 10px var(--highlight-background-color);
 }
 
-/*form.editable .results .table-result {
-  color: white;
-}
-form.editable .results .table-result {
-  color: white;
-}*/
 form.editable .results .result-image img {
   background-color: var(--foreground-color);
 }
@@ -1415,7 +1384,6 @@ button.file-picker {
 }
 
 #chat-controls i.fas:hover {
-  /* TODO: fix mcglincy XXX */
   color: var(--highlight-background-color);
   text-shadow: 0 0 5px var(--highlight-background-color);
 }
@@ -1479,10 +1447,6 @@ button.file-picker {
   border-radius: 0;
 }
 
-/* #chat-log .flavor-text {
-  color: white;
-  font-size: 13.5px;
-} */
 #chat-form textarea {
   color: var(--foreground-color);
   background: var(--background-color);
