--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -1174,6 +1174,12 @@ input[type="radio"]:disabled
   height: 45px;
 }
 
+.morkborg.sheet.actor.container .sheet-header .holding-row {
+  flex: 0 0 35px;
+  margin-bottom: 10px;
+  margin-left: 14px;
+}
+
 /* ====================== */
 /* UI/Dialog fixes */
 /* ====================== */
