--- a/scss/morkborg.scss
+++ b/scss/morkborg.scss
@@ -993,6 +993,11 @@
 .morkborg.sheet.actor.container .sheet-header input[type="text"].container-name {
   height: 45px;
 }
+.morkborg.sheet.actor.container .sheet-header .holding-row {
+  flex: 0 0 35px;
+  margin-bottom: 10px;
+  margin-left: 14px;
+}
 /* ====================== */
 /* UI/Dialog fixes */
 /* ====================== */
