Add a foundry default color scheme.

--- a/scss/morkborg.scss
+++ b/scss/morkborg.scss
@@ -4,6 +4,7 @@
   --foreground-alt-color: #ffe900;
   --highlight-background-color: #ffe900;
   --highlight-foreground-color: #000000;
+  --window-background: #000000;
   --chat-font: "Alegreya";
   --chat-info-font: "Oswald";
   --h1-font: "Blood Crow";
@@ -121,7 +122,8 @@
   overflow-y: hidden;
   padding: 5px;
   /* inherited background is parchment img bg */
-  background: var(--background-color);
+  background: var(--window-background);
+  /* background: url(../ui/parchment.jpg) repeat */;
   font-size: 13px;
   color: var(--foreground-color);
   border-bottom: 1px solid #222222;
