Fix editor target.

--- a/templates/actor/character-sheet.html
+++ b/templates/actor/character-sheet.html
@@ -91,7 +91,7 @@
 
         {{!-- Obituary Tab --}}
         <div class="tab class-tab" data-group="primary" data-tab="obituary">
-            {{editor content=data.data.description target="data.data.description" button=true owner=owner editable=true}}
+            {{editor content=data.data.description target="data.description" button=true owner=owner editable=true}}
         </div>
 
         {{!-- Violence Tab --}}
